--- a/notebooks/pusht_discretization_verification.ipynb
+++ b/notebooks/pusht_discretization_verification.ipynb
@@ -79,6 +79,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "0b0b9963",
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": 19,
       "id": "2632fab2",
       "metadata": {},
@@ -175,7 +183,40 @@
         "    if not obs_dir.exists():\n",
         "        return 0\n",
         "    return sum(1 for _ in obs_dir.glob(\"episode_*\"))\n",
-        "\n\ndef flatten_valid_tensor(tensor: torch.Tensor, lengths: np.ndarray) -> torch.Tensor:\n    lengths = np.asarray(lengths, dtype=np.int64)\n    if tensor.shape[0] != len(lengths):\n        raise ValueError(f\"Mismatch between tensor batch {tensor.shape[0]} and lengths {len(lengths)}\")\n    chunks: List[torch.Tensor] = []\n    for epi, L in enumerate(lengths):\n        L_int = int(L)\n        if L_int > 0:\n            chunks.append(tensor[epi, :L_int])\n    if not chunks:\n        return torch.empty((0, tensor.shape[-1]), dtype=tensor.dtype)\n    return torch.cat(chunks, dim=0)\n\n\ndef sample_valid_positions(lengths: np.ndarray, num_samples: int, rng=None) -> List[Tuple[int, int]]:\n    lengths = np.asarray(lengths, dtype=np.int64)\n    total_steps = int(lengths.sum())\n    if num_samples <= 0 or total_steps == 0:\n        return []\n    if rng is None:\n        rng = np.random.default_rng()\n    count = min(num_samples, total_steps)\n    flat_indices = np.asarray(rng.choice(total_steps, size=count, replace=False), dtype=np.int64)\n    flat_indices.sort()\n    cumulative = lengths.cumsum()\n    samples: List[Tuple[int, int]] = []\n    for idx in flat_indices:\n        epi = int(np.searchsorted(cumulative, idx, side='right'))\n        prev = int(cumulative[epi - 1]) if epi > 0 else 0\n        step = int(idx - prev)\n        samples.append((epi, step))\n    return samples\n"
+        "\n",
+        "\n",
+        "def flatten_valid_tensor(tensor: torch.Tensor, lengths: np.ndarray) -> torch.Tensor:\n",
+        "    lengths = np.asarray(lengths, dtype=np.int64)\n",
+        "    if tensor.shape[0] != len(lengths):\n",
+        "        raise ValueError(f\"Mismatch between tensor batch {tensor.shape[0]} and lengths {len(lengths)}\")\n",
+        "    chunks: List[torch.Tensor] = []\n",
+        "    for epi, L in enumerate(lengths):\n",
+        "        L_int = int(L)\n",
+        "        if L_int > 0:\n",
+        "            chunks.append(tensor[epi, :L_int])\n",
+        "    if not chunks:\n",
+        "        return torch.empty((0, tensor.shape[-1]), dtype=tensor.dtype)\n",
+        "    return torch.cat(chunks, dim=0)\n",
+        "\n",
+        "\n",
+        "def sample_valid_positions(lengths: np.ndarray, num_samples: int, rng=None) -> List[Tuple[int, int]]:\n",
+        "    lengths = np.asarray(lengths, dtype=np.int64)\n",
+        "    total_steps = int(lengths.sum())\n",
+        "    if num_samples <= 0 or total_steps == 0:\n",
+        "        return []\n",
+        "    if rng is None:\n",
+        "        rng = np.random.default_rng()\n",
+        "    count = min(num_samples, total_steps)\n",
+        "    flat_indices = np.asarray(rng.choice(total_steps, size=count, replace=False), dtype=np.int64)\n",
+        "    flat_indices.sort()\n",
+        "    cumulative = lengths.cumsum()\n",
+        "    samples: List[Tuple[int, int]] = []\n",
+        "    for idx in flat_indices:\n",
+        "        epi = int(np.searchsorted(cumulative, idx, side='right'))\n",
+        "        prev = int(cumulative[epi - 1]) if epi > 0 else 0\n",
+        "        step = int(idx - prev)\n",
+        "        samples.append((epi, step))\n",
+        "    return samples\n"
       ]
     },
     {
@@ -211,18 +252,18 @@
             "source episodes     : 18685\n",
             "discretized episodes: 18685\n",
             "rel_actions identical: True (max diff=0.000e+00)\n",
-            "  kmeans_k9: mean|\u0394|=3.7636, max|\u0394|=153.7511, unique centroids=10\n",
-            "  kmeans_k15: mean|\u0394|=3.0071, max|\u0394|=144.6930, unique centroids=16\n",
-            "  fixed_compass_r24: mean|\u0394|=4.6653, max|\u0394|=180.2670, unique centroids=5\n",
+            "  kmeans_k9: mean|Δ|=3.7636, max|Δ|=153.7511, unique centroids=10\n",
+            "  kmeans_k15: mean|Δ|=3.0071, max|Δ|=144.6930, unique centroids=16\n",
+            "  fixed_compass_r24: mean|Δ|=4.6653, max|Δ|=180.2670, unique centroids=5\n",
             "states_constant zeros check: max|value|=0.000e+00\n",
             "\n",
             "[val] episode counts\n",
             "source episodes     : 21\n",
             "discretized episodes: 21\n",
             "rel_actions identical: True (max diff=0.000e+00)\n",
-            "  kmeans_k9: mean|\u0394|=3.5948, max|\u0394|=71.3540, unique centroids=10\n",
-            "  kmeans_k15: mean|\u0394|=2.8930, max|\u0394|=66.2523, unique centroids=16\n",
-            "  fixed_compass_r24: mean|\u0394|=4.4253, max|\u0394|=89.8806, unique centroids=5\n",
+            "  kmeans_k9: mean|Δ|=3.5948, max|Δ|=71.3540, unique centroids=10\n",
+            "  kmeans_k15: mean|Δ|=2.8930, max|Δ|=66.2523, unique centroids=16\n",
+            "  fixed_compass_r24: mean|Δ|=4.4253, max|Δ|=89.8806, unique centroids=5\n",
             "states_constant zeros check: max|value|=0.000e+00\n"
           ]
         }
@@ -280,7 +321,7 @@
         "        flat = var_tensor.reshape(-1, var_tensor.shape[-1])\n",
         "        unique_centroids = int(torch.unique(flat, dim=0).shape[0])\n",
         "        variant_stats.append({\"split\": split, \"variant\": variant, \"mean_abs_diff\": mean_abs, \"max_abs_diff\": max_abs, \"unique_centroids\": unique_centroids})\n",
-        "        print(f\"  {variant}: mean|\u0394|={mean_abs:.4f}, max|\u0394|={max_abs:.4f}, unique centroids={unique_centroids}\")\n",
+        "        print(f\"  {variant}: mean|Δ|={mean_abs:.4f}, max|Δ|={max_abs:.4f}, unique centroids={unique_centroids}\")\n",
         "        del var_tensor, delta, flat\n",
         "    states = torch.load(split_dir_dst / STATES_FNAME, map_location=\"cpu\")\n",
         "    states_const = torch.load(split_dir_dst / STATE_CONSTANT_FNAME, map_location=\"cpu\")\n",
@@ -360,7 +401,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Split   Variant                  mean|\u0394|      max|\u0394|   Centroids\n",
+            "Split   Variant                  mean|Δ|      max|Δ|   Centroids\n",
             "----------------------------------------------------------------\n",
             "train   kmeans_k9               3.763560  153.751147          10\n",
             "train   kmeans_k15              3.007122  144.692996          16\n",
@@ -376,7 +417,7 @@
         "if not variant_stats:\n",
         "    print(\"No variant statistics collected. Run the previous cell first.\")\n",
         "else:\n",
-        "    header = f\"{'Split':<8}{'Variant':<20}{'mean|\u0394|':>12}{'max|\u0394|':>12}{'Centroids':>12}\"\n",
+        "    header = f\"{'Split':<8}{'Variant':<20}{'mean|Δ|':>12}{'max|Δ|':>12}{'Centroids':>12}\"\n",
         "    print(header)\n",
         "    print('-' * len(header))\n",
         "    for entry in variant_stats:\n",
@@ -494,6 +535,46 @@
         "        del disc_tensor\n",
         "    del src_actions\n",
         "    gc.collect()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "b9c25198",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# === Dataset normalization stats ===\n",
+        "NORMALIZATION_DATASET_DIR = SRC_DATASET_DIR  # change to DST_DATASET_DIR or a subset root if desired\n",
+        "NORMALIZATION_SPLITS = (\"train\",)  # typically normalization is computed on the train split\n",
+        "TARGET_FILES = (STATES_FNAME, VELOCITIES_FNAME, ACTIONS_FNAME, ABS_ACTIONS_FNAME)\n",
+        "\n",
+        "def compute_mean_std(split_dir: Path, lengths: np.ndarray, fname: str) -> tuple[torch.Tensor, torch.Tensor]:\n",
+        "    path = split_dir / fname\n",
+        "    tensor = torch.load(path, map_location=\"cpu\")\n",
+        "    flat = flatten_valid_tensor(tensor, lengths)\n",
+        "    if flat.numel() == 0:\n",
+        "        raise ValueError(f\"No valid samples found in {path}\")\n",
+        "    mean = flat.mean(dim=0)\n",
+        "    std = flat.std(dim=0, unbiased=False)\n",
+        "    return mean, std\n",
+        "\n",
+        "print(\"== Normalization statistics ==\")\n",
+        "for split in NORMALIZATION_SPLITS:\n",
+        "    split_dir = NORMALIZATION_DATASET_DIR / split\n",
+        "    lengths = load_lengths(split_dir)\n",
+        "    if lengths.size == 0:\n",
+        "        print(f\"[skip] No episodes found for {split_dir}\")\n",
+        "        continue\n",
+        "    for fname in TARGET_FILES:\n",
+        "        path = split_dir / fname\n",
+        "        if not path.exists():\n",
+        "            print(f\"[skip] Missing {path}\")\n",
+        "            continue\n",
+        "        mean, std = compute_mean_std(split_dir, lengths, fname)\n",
+        "        print(f\"[{split}] {fname}: mean shape={tuple(mean.shape)}, std shape={tuple(std.shape)}\")\n",
+        "        print(f\"    mean={mean.tolist()}\")\n",
+        "        print(f\"    std ={std.tolist()}\")"
       ]
     }
   ],
