--- a/notebooks/pusht_discretization_verification.ipynb
+++ b/notebooks/pusht_discretization_verification.ipynb
@@ -18,21 +18,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 3,
       "id": "de4dafb3",
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Source dataset       : /Users/julianquast/Documents/Documents - pythonPedro (Mac)/Bachelor Thesis/Datasets/pusht_noise\n",
-            "Discretized dataset  : /Users/julianquast/Documents/Documents - pythonPedro (Mac)/Bachelor Thesis/Datasets/pusht_noise_discretized\n",
-            "Subset roots         : {'1k': PosixPath('/Users/julianquast/Documents/Documents - pythonPedro (Mac)/Bachelor Thesis/Datasets/pusht_noise_discretized_1k'), '10k': PosixPath('/Users/julianquast/Documents/Documents - pythonPedro (Mac)/Bachelor Thesis/Datasets/pusht_noise_discretized_10k')}\n",
-            "Variants             : ('kmeans_k9', 'kmeans_k15', 'fixed_compass_r24')\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# === Imports & configuration ===\n",
         "import os, gc, math, pickle\n",
@@ -64,30 +53,22 @@
         "        return candidate\n",
         "    raise FileNotFoundError(f\"Could not resolve dataset directory from {path_str!r}. Provide SRC_DATASET_DIR or DATASET_DIR.\")\n",
         "\n",
-        "src_root_env = os.getenv(\"SRC_DATASET_DIR\", os.getenv(\"DATASET_DIR\", \"data\"))\n",
-        "SRC_DATASET_DIR = _resolve_dataset_dir(src_root_env)\n",
-        "dst_root_env = os.getenv(\"DST_DATASET_DIR\", str(SRC_DATASET_DIR.parent / \"pusht_noise_discretized\"))\n",
-        "DST_DATASET_DIR = Path(dst_root_env).expanduser()\n",
+        "#src_root_env = os.getenv(\"SRC_DATASET_DIR\", os.getenv(\"DATASET_DIR\", \"data\"))\n",
+        "#SRC_DATASET_DIR = _resolve_dataset_dir(src_root_env)\n",
+        "#dst_root_env = os.getenv(\"DST_DATASET_DIR\", str(SRC_DATASET_DIR.parent / \"pusht_noise_discretized\"))\n",
+        "#DST_DATASET_DIR = Path(dst_root_env).expanduser()\n",
         "\n",
-        "subset_roots = {name: DST_DATASET_DIR.parent / f\"{DST_DATASET_DIR.name}_{name}\" for name in SUBSET_SPECS}\n",
+        "#subset_roots = {name: DST_DATASET_DIR.parent / f\"{DST_DATASET_DIR.name}_{name}\" for name in SUBSET_SPECS}\n",
         "\n",
-        "print(f\"Source dataset       : {SRC_DATASET_DIR}\")\n",
-        "print(f\"Discretized dataset  : {DST_DATASET_DIR}\")\n",
-        "print(f\"Subset roots         : {subset_roots}\")\n",
-        "print(f\"Variants             : {VARIANTS}\")\n"
+        "#print(f\"Source dataset       : {SRC_DATASET_DIR}\")\n",
+        "#print(f\"Discretized dataset  : {DST_DATASET_DIR}\")\n",
+        "#print(f\"Subset roots         : {subset_roots}\")\n",
+        "#print(f\"Variants             : {VARIANTS}\")\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "0b0b9963",
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 4,
       "id": "2632fab2",
       "metadata": {},
       "outputs": [],
@@ -539,42 +520,87 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "b9c25198",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "== Normalization statistics ==\n",
+            "\n",
+            "states.pth:\n",
+            "mean = [228.80013046722397, 292.23928571947437, 243.38166684940015, 275.10615822264384, 2.134916896105279]\n",
+            "std  = [103.3750583805845, 98.88583176268641, 72.14114197547599, 73.42942473807634, 1.9269175846498459]\n",
+            "\n",
+            "rel_actions_discretized_kmeans_k9.pth:\n",
+            "mean = [-0.7574158921565196, 0.8338871180550678]\n",
+            "std  = [18.50100927863009, 18.254215431505138]\n"
+          ]
+        }
+      ],
       "source": [
-        "# === Dataset normalization stats ===\n",
-        "NORMALIZATION_DATASET_DIR = SRC_DATASET_DIR  # change to DST_DATASET_DIR or a subset root if desired\n",
-        "NORMALIZATION_SPLITS = (\"train\",)  # typically normalization is computed on the train split\n",
-        "TARGET_FILES = (STATES_FNAME, VELOCITIES_FNAME, ACTIONS_FNAME, ABS_ACTIONS_FNAME)\n",
+        "import torch\n",
+        "import numpy as np\n",
+        "from pathlib import Path\n",
         "\n",
-        "def compute_mean_std(split_dir: Path, lengths: np.ndarray, fname: str) -> tuple[torch.Tensor, torch.Tensor]:\n",
-        "    path = split_dir / fname\n",
-        "    tensor = torch.load(path, map_location=\"cpu\")\n",
-        "    flat = flatten_valid_tensor(tensor, lengths)\n",
-        "    if flat.numel() == 0:\n",
-        "        raise ValueError(f\"No valid samples found in {path}\")\n",
-        "    mean = flat.mean(dim=0)\n",
-        "    std = flat.std(dim=0, unbiased=False)\n",
+        "def stream_mean_std(path: Path, lengths: np.ndarray):\n",
+        "    \"\"\"\n",
+        "    Compute mean/std without loading all data into memory.\n",
+        "    Uses a numerically stable streaming estimator.\n",
+        "    \"\"\"\n",
+        "    data = torch.load(path, map_location=\"cpu\")\n",
+        "    count = 0\n",
+        "    mean = None\n",
+        "    M2 = None\n",
+        "\n",
+        "    for i, L in enumerate(lengths):\n",
+        "        x = data[i, :L]   # shape [L, D] or [L]\n",
+        "        x = x.reshape(-1, x.shape[-1] if x.ndim > 1 else 1)\n",
+        "\n",
+        "        if mean is None:\n",
+        "            mean = x.mean(dim=0)\n",
+        "            M2 = ((x - mean)**2).sum(dim=0)\n",
+        "            count = x.shape[0]\n",
+        "        else:\n",
+        "            batch_mean = x.mean(dim=0)\n",
+        "            batch_count = x.shape[0]\n",
+        "\n",
+        "            delta = batch_mean - mean\n",
+        "            new_count = count + batch_count\n",
+        "\n",
+        "            mean = mean + delta * batch_count / new_count\n",
+        "            M2 = M2 + ((x - batch_mean)**2).sum(dim=0) + delta**2 * count * batch_count / new_count\n",
+        "            count = new_count\n",
+        "\n",
+        "    variance = M2 / count\n",
+        "    std = torch.sqrt(variance)\n",
         "    return mean, std\n",
         "\n",
+        "\n",
+        "# === MAIN ===\n",
+        "DATA_DIR = Path('/Users/julianquast/Documents/Documents - pythonPedro (Mac)/Bachelor Thesis/Datasets/pusht_noise_discretized_10k/train')\n",
+        "\n",
+        "TARGET_FILES = [\n",
+        "    \"states.pth\",\n",
+        "    \"rel_actions_discretized_kmeans_k9.pth\",\n",
+        "]\n",
+        "\n",
+        "lengths = load_lengths(DATA_DIR)\n",
+        "\n",
         "print(\"== Normalization statistics ==\")\n",
-        "for split in NORMALIZATION_SPLITS:\n",
-        "    split_dir = NORMALIZATION_DATASET_DIR / split\n",
-        "    lengths = load_lengths(split_dir)\n",
-        "    if lengths.size == 0:\n",
-        "        print(f\"[skip] No episodes found for {split_dir}\")\n",
+        "for fname in TARGET_FILES:\n",
+        "    path = DATA_DIR / fname\n",
+        "    if not path.exists():\n",
+        "        print(f\"[skip] Missing {path}\")\n",
         "        continue\n",
-        "    for fname in TARGET_FILES:\n",
-        "        path = split_dir / fname\n",
-        "        if not path.exists():\n",
-        "            print(f\"[skip] Missing {path}\")\n",
-        "            continue\n",
-        "        mean, std = compute_mean_std(split_dir, lengths, fname)\n",
-        "        print(f\"[{split}] {fname}: mean shape={tuple(mean.shape)}, std shape={tuple(std.shape)}\")\n",
-        "        print(f\"    mean={mean.tolist()}\")\n",
-        "        print(f\"    std ={std.tolist()}\")"
+        "\n",
+        "    mean, std = stream_mean_std(path, lengths)\n",
+        "\n",
+        "    print(f\"\\n{fname}:\")\n",
+        "    print(\"mean =\", mean.tolist())\n",
+        "    print(\"std  =\", std.tolist())\n"
       ]
     }
   ],
