--- a/notebooks/pusht_discretization_verification.ipynb
+++ b/notebooks/pusht_discretization_verification.ipynb
@@ -408,6 +408,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "faf0c04f",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -436,6 +437,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "a49c5b8a",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -470,6 +472,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "ed66583e",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -520,7 +523,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 10,
       "id": "b9c25198",
       "metadata": {},
       "outputs": [
@@ -528,48 +531,69 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "== Normalization statistics ==\n",
+            "\n",
+            "== FULL NORMALIZATION STATISTICS ==\n",
+            "\n",
+            "### === Split: train ===\n",
             "\n",
             "states.pth:\n",
-            "mean = [228.80013046722397, 292.23928571947437, 243.38166684940015, 275.10615822264384, 2.134916896105279]\n",
-            "std  = [103.3750583805845, 98.88583176268641, 72.14114197547599, 73.42942473807634, 1.9269175846498459]\n",
+            "STATE_MEAN = [228.80013046722397, 292.23928571947437, 243.38166684940015, 275.10615822264384, 2.134916896105279]\n",
+            "STATE_STD  = [103.3750583805845, 98.88583176268641, 72.14114197547599, 73.42942473807634, 1.9269175846498459]\n",
             "\n",
-            "rel_actions_discretized_kmeans_k9.pth:\n",
-            "mean = [-0.7574158921565196, 0.8338871180550678]\n",
-            "std  = [18.50100927863009, 18.254215431505138]\n"
+            "velocities.pth:\n",
+            "VELOCITY_MEAN = [-2.7731256181867816, 2.4451125050510716]\n",
+            "VELOCITY_STD  = [77.44748138800577, 76.8600445976182]\n",
+            "\n",
+            "states + velocities (used when with_velocity=True):\n",
+            "STATE_MEAN = [228.80013046722397, 292.23928571947437, 243.38166684940015, 275.10615822264384, 2.134916896105279, -2.7731256181867816, 2.4451125050510716]\n",
+            "STATE_STD  = [103.3750583805845, 98.88583176268641, 72.14114197547599, 73.42942473807634, 1.9269175846498459, 77.44748138800577, 76.8600445976182]\n",
+            "\n",
+            "PROPRIO:\n",
+            "PROPRIO_MEAN = [228.80013046722397, 292.23928571947437, -2.7731256181867816, 2.4451125050510716]\n",
+            "PROPRIO_STD  = [103.3750583805845, 98.88583176268641, 77.44748138800577, 76.8600445976182]\n",
+            "\n",
+            "rel_actions_discretized_kmeans_k9.pth (scaled /100):\n",
+            "ACTION_MEAN = [-0.007574173156172037, 0.00833887979388237]\n",
+            "ACTION_STD  = [0.18500997126102448, 0.1825418770313263]\n",
+            "\n",
+            "abs_actions.pth (scaled /100):\n",
+            "ABS_ACTION_MEAN = [2.2805848121643066, 2.928978443145752]\n",
+            "ABS_ACTION_STD  = [1.0326029062271118, 0.9857578873634338]\n"
           ]
         }
       ],
       "source": [
         "import torch\n",
         "import numpy as np\n",
+        "import pickle\n",
         "from pathlib import Path\n",
         "\n",
-        "def stream_mean_std(path: Path, lengths: np.ndarray):\n",
+        "# -------------------------------------------------------\n",
+        "# Streaming mean/std for any time-series tensor\n",
+        "# -------------------------------------------------------\n",
+        "def stream_mean_std_from_tensor(tensor, lengths):\n",
         "    \"\"\"\n",
-        "    Compute mean/std without loading all data into memory.\n",
-        "    Uses a numerically stable streaming estimator.\n",
+        "    tensor: shape [N, T, D] or [N, T]\n",
+        "    lengths: list/array of episode lengths\n",
         "    \"\"\"\n",
-        "    data = torch.load(path, map_location=\"cpu\")\n",
         "    count = 0\n",
         "    mean = None\n",
         "    M2 = None\n",
         "\n",
         "    for i, L in enumerate(lengths):\n",
-        "        x = data[i, :L]   # shape [L, D] or [L]\n",
+        "        x = tensor[i, :L]          # shape [L, D] or [L]\n",
         "        x = x.reshape(-1, x.shape[-1] if x.ndim > 1 else 1)\n",
         "\n",
-        "        if mean is None:\n",
-        "            mean = x.mean(dim=0)\n",
-        "            M2 = ((x - mean)**2).sum(dim=0)\n",
-        "            count = x.shape[0]\n",
-        "        else:\n",
-        "            batch_mean = x.mean(dim=0)\n",
-        "            batch_count = x.shape[0]\n",
+        "        batch_mean = x.mean(dim=0)\n",
+        "        batch_count = x.shape[0]\n",
         "\n",
+        "        if mean is None:\n",
+        "            mean = batch_mean\n",
+        "            M2 = ((x - batch_mean)**2).sum(dim=0)\n",
+        "            count = batch_count\n",
+        "        else:\n",
         "            delta = batch_mean - mean\n",
         "            new_count = count + batch_count\n",
-        "\n",
         "            mean = mean + delta * batch_count / new_count\n",
         "            M2 = M2 + ((x - batch_mean)**2).sum(dim=0) + delta**2 * count * batch_count / new_count\n",
         "            count = new_count\n",
@@ -579,28 +603,87 @@
         "    return mean, std\n",
         "\n",
         "\n",
-        "# === MAIN ===\n",
-        "DATA_DIR = Path('/Users/julianquast/Documents/Documents - pythonPedro (Mac)/Bachelor Thesis/Datasets/pusht_noise_discretized_10k/train')\n",
+        "# -------------------------------------------------------\n",
+        "# Helper: load lengths\n",
+        "# -------------------------------------------------------\n",
+        "def load_lengths(split_dir):\n",
+        "    with open(split_dir / \"seq_lengths.pkl\", \"rb\") as f:\n",
+        "        return np.array(pickle.load(f))\n",
         "\n",
-        "TARGET_FILES = [\n",
-        "    \"states.pth\",\n",
-        "    \"rel_actions_discretized_kmeans_k9.pth\",\n",
-        "]\n",
         "\n",
-        "lengths = load_lengths(DATA_DIR)\n",
+        "# -------------------------------------------------------\n",
+        "# MAIN\n",
+        "# -------------------------------------------------------\n",
+        "ROOT = Path(\"/Users/julianquast/Documents/Documents - pythonPedro (Mac)/Bachelor Thesis/Datasets/pusht_noise_discretized_10k\")\n",
         "\n",
-        "print(\"== Normalization statistics ==\")\n",
-        "for fname in TARGET_FILES:\n",
-        "    path = DATA_DIR / fname\n",
-        "    if not path.exists():\n",
-        "        print(f\"[skip] Missing {path}\")\n",
+        "SPLITS = (\"train\",)\n",
+        "\n",
+        "print(\"\\n== FULL NORMALIZATION STATISTICS ==\")\n",
+        "\n",
+        "for split in SPLITS:\n",
+        "    split_dir = ROOT / split\n",
+        "    if not split_dir.exists():\n",
+        "        print(f\"[skip] No directory {split_dir}\")\n",
         "        continue\n",
         "\n",
-        "    mean, std = stream_mean_std(path, lengths)\n",
+        "    lengths = load_lengths(split_dir)\n",
         "\n",
-        "    print(f\"\\n{fname}:\")\n",
-        "    print(\"mean =\", mean.tolist())\n",
-        "    print(\"std  =\", std.tolist())\n"
+        "    print(f\"\\n### === Split: {split} ===\")\n",
+        "\n",
+        "    # -------- STATES.PTH --------\n",
+        "    state_path = split_dir / \"states.pth\"\n",
+        "    if state_path.exists():\n",
+        "        states = torch.load(state_path, map_location=\"cpu\")\n",
+        "        mean_s, std_s = stream_mean_std_from_tensor(states, lengths)\n",
+        "        print(\"\\nstates.pth:\")\n",
+        "        print(\"STATE_MEAN =\", mean_s.tolist())\n",
+        "        print(\"STATE_STD  =\", std_s.tolist())\n",
+        "\n",
+        "    # -------- VELOCITIES.PTH --------\n",
+        "    vel_path = split_dir / \"velocities.pth\"\n",
+        "    if vel_path.exists():\n",
+        "        velocities = torch.load(vel_path, map_location=\"cpu\")\n",
+        "        mean_v, std_v = stream_mean_std_from_tensor(velocities, lengths)\n",
+        "        print(\"\\nvelocities.pth:\")\n",
+        "        print(\"VELOCITY_MEAN =\", mean_v.tolist())\n",
+        "        print(\"VELOCITY_STD  =\", std_v.tolist())\n",
+        "\n",
+        "        # update state stats with velocities appended (for with_velocity=True)\n",
+        "        states_vel = torch.cat([states, velocities], dim=-1)\n",
+        "        mean_sv, std_sv = stream_mean_std_from_tensor(states_vel, lengths)\n",
+        "        print(\"\\nstates + velocities (used when with_velocity=True):\")\n",
+        "        print(\"STATE_MEAN =\", mean_sv.tolist())\n",
+        "        print(\"STATE_STD  =\", std_sv.tolist())\n",
+        "\n",
+        "    # -------- PROPRIO --------\n",
+        "    # state dims 0:2 + velocities if present\n",
+        "    proprio = states[..., :2]\n",
+        "    if vel_path.exists():\n",
+        "        proprio = torch.cat([proprio, velocities], dim=-1)\n",
+        "\n",
+        "    mean_p, std_p = stream_mean_std_from_tensor(proprio, lengths)\n",
+        "    print(\"\\nPROPRIO:\")\n",
+        "    print(\"PROPRIO_MEAN =\", mean_p.tolist())\n",
+        "    print(\"PROPRIO_STD  =\", std_p.tolist())\n",
+        "\n",
+        "    # -------- RELATIVE ACTIONS --------\n",
+        "    rel_act_path = split_dir / \"rel_actions_discretized_kmeans_k9.pth\"\n",
+        "    if rel_act_path.exists():\n",
+        "        rel_actions = torch.load(rel_act_path, map_location=\"cpu\").float() / 100.0\n",
+        "        mean_a, std_a = stream_mean_std_from_tensor(rel_actions, lengths)\n",
+        "        print(\"\\nrel_actions_discretized_kmeans_k9.pth (scaled /100):\")\n",
+        "        print(\"ACTION_MEAN =\", mean_a.tolist())\n",
+        "        print(\"ACTION_STD  =\", std_a.tolist())\n",
+        "\n",
+        "    # -------- ABSOLUTE ACTIONS --------\n",
+        "    abs_act_path = split_dir / \"abs_actions.pth\"\n",
+        "    if abs_act_path.exists():\n",
+        "        abs_actions = torch.load(abs_act_path, map_location=\"cpu\").float() / 100.0\n",
+        "        mean_aa, std_aa = stream_mean_std_from_tensor(abs_actions, lengths)\n",
+        "        print(\"\\nabs_actions.pth (scaled /100):\")\n",
+        "        print(\"ABS_ACTION_MEAN =\", mean_aa.tolist())\n",
+        "        print(\"ABS_ACTION_STD  =\", std_aa.tolist())\n",
+        "\n"
       ]
     }
   ],
