--- a/notebooks/pusht_discretization_codebooks.ipynb
+++ b/notebooks/pusht_discretization_codebooks.ipynb
@@ -337,45 +337,6 @@
    "outputs": [],
    "source": [
     "# === Subset helpers (1k / 10k datasets) ===\n",
-    "def allocate_subset_counts(total_target: int, split_meta: Dict[str, Dict[str, int]]) -> Dict[str, int]:\n",
-    "    total_available = sum(meta[\"num_episodes\"] for meta in split_meta.values())\n",
-    "    if total_target >= total_available:\n",
-    "        return {split: meta[\"num_episodes\"] for split, meta in split_meta.items()}\n",
-    "    counts: Dict[str, int] = {}\n",
-    "    remaining = total_target\n",
-    "    for idx, split in enumerate(SPLITS):\n",
-    "        meta = split_meta[split]\n",
-    "        if idx == len(SPLITS) - 1:\n",
-    "            take = remaining\n",
-    "        else:\n",
-    "            prop = meta[\"num_episodes\"] / total_available\n",
-    "            take = min(meta[\"num_episodes\"], int(round(total_target * prop)))\n",
-    "        counts[split] = max(0, min(meta[\"num_episodes\"], take))\n",
-    "        remaining -= counts[split]\n",
-    "    while remaining > 0:\n",
-    "        for split in SPLITS:\n",
-    "            if counts[split] < split_meta[split][\"num_episodes\"]:\n",
-    "                counts[split] += 1\n",
-    "                remaining -= 1\n",
-    "                if remaining == 0:\n",
-    "                    break\n",
-    "    return counts\n",
-    "\n",
-    "\n",
-    "def subset_tensor_file(path: Path, idxs: np.ndarray, orig_count: int):\n",
-    "    if not path.exists():\n",
-    "        return False\n",
-    "    obj = torch.load(path, map_location=\"cpu\")\n",
-    "    if torch.is_tensor(obj) and obj.shape[0] == orig_count:\n",
-    "        subset = obj[idxs]\n",
-    "        torch.save(subset, path)\n",
-    "        return True\n",
-    "    if isinstance(obj, (list, tuple)) and len(obj) == orig_count:\n",
-    "        subset = [obj[int(i)] for i in idxs]\n",
-    "        torch.save(subset, path)\n",
-    "        return True\n",
-    "    return False\n",
-    "\n",
     "\n",
     "def subset_pickle_file(path: Path, idxs: np.ndarray, orig_count: int):\n",
     "    if not path.exists():\n",
@@ -444,40 +405,67 @@
    "source": [
     "# === Build subset datasets (1k / 10k trajectories) ===\n",
     "subset_roots: Dict[str, Path] = {}\n",
+    "\n",
+    "# how many episodes are in the ORIGINAL train split\n",
+    "train_avail = split_meta[\"train\"][\"num_episodes\"]\n",
+    "print(f\"Original train episodes: {train_avail}\")\n",
+    "assert train_avail > 0, \"No train episodes available.\"\n",
+    "\n",
     "for subset_name, target_total in SUBSET_SPECS.items():\n",
+    "    assert target_total <= train_avail, (\n",
+    "        f\"Requested {target_total} episodes but only {train_avail} train episodes available.\"\n",
+    "    )\n",
+    "\n",
     "    subset_root = DST_DATASET_DIR.parent / f\"{DST_DATASET_DIR.name}_{subset_name}\"\n",
     "    subset_roots[subset_name] = subset_root\n",
+    "\n",
     "    if subset_root.exists():\n",
     "        print(f\"[skip] {subset_root} already exists\")\n",
     "        continue\n",
+    "\n",
     "    print(f\"\\n== Building subset {subset_name} ({target_total} trajectories) ==\")\n",
+    "\n",
+    "    # 1) Copy the full dataset directory as before\n",
     "    shutil.copytree(DST_DATASET_DIR, subset_root)\n",
-    "    counts = allocate_subset_counts(target_total, split_meta)\n",
+    "\n",
+    "    # 2) Overwrite the subset's `val` split with a COPY of the ORIGINAL `train` split.\n",
+    "    #    => Both subset_root/train and subset_root/val now have train-like structure.\n",
+    "    if (subset_root / \"val\").exists():\n",
+    "        shutil.rmtree(subset_root / \"val\")\n",
+    "    shutil.copytree(DST_DATASET_DIR / \"train\", subset_root / \"val\")\n",
+    "\n",
+    "    # 3) Sample indices from the ORIGINAL train pool\n",
     "    subset_rng = np.random.default_rng(RANDOM_SEED + target_total)\n",
-    "    for split in SPLITS:\n",
-    "        orig_count = split_meta[split][\"num_episodes\"]\n",
-    "        take = min(orig_count, counts.get(split, 0))\n",
-    "        if take <= 0:\n",
-    "            idxs = np.empty((0,), dtype=np.int64)\n",
-    "        elif take == orig_count:\n",
-    "            idxs = np.arange(orig_count, dtype=np.int64)\n",
-    "        else:\n",
-    "            idxs = np.sort(subset_rng.choice(orig_count, size=take, replace=False))\n",
-    "        print(f\"[{subset_name}/{split}] keeping {len(idxs)} / {orig_count} episodes\")\n",
-    "        subset_split_dir(subset_root / split, idxs, orig_count)\n",
-    "    print(f\"Subset {subset_name} written to {subset_root}\")\n"
+    "\n",
+    "    all_idxs = np.sort(subset_rng.choice(train_avail, size=target_total, replace=False))\n",
+    "\n",
+    "    # 4) Split into new train/val (90/10)\n",
+    "    train_target = int(round(target_total * 0.9))\n",
+    "    val_target   = target_total - train_target\n",
+    "\n",
+    "    train_idxs = all_idxs[:train_target]\n",
+    "    val_idxs   = all_idxs[train_target:]\n",
+    "\n",
+    "    print(f\"[{subset_name}/train] keeping {len(train_idxs)} / {train_avail} episodes\")\n",
+    "    subset_split_dir(subset_root / \"train\", train_idxs, train_avail)\n",
+    "\n",
+    "    print(f\"[{subset_name}/val] keeping {len(val_idxs)} / {train_avail} episodes\")\n",
+    "    subset_split_dir(subset_root / \"val\", val_idxs, train_avail)\n",
+    "\n",
+    "    print(f\"Subset {subset_name} written to {subset_root}\")\n",
+    "\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "dino_wm",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.x"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
