--- a/notebooks/pusht_discretization_codebooks.ipynb
+++ b/notebooks/pusht_discretization_codebooks.ipynb
@@ -21,6 +21,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "40319ddb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.environ[\"DATASET_DIR\"] = \"/content/pusht_noise_discretized_18k\"   # example\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3ca121a6",
    "metadata": {},
    "outputs": [],
