Make dataset copying tolerant of existing directories

--- a/notebooks/pusht_discretization_codebooks.ipynb
+++ b/notebooks/pusht_discretization_codebooks.ipynb
@@ -208,7 +208,7 @@
     "        print(f\"[skip] {dst} already exists\")\n",
     "        return\n",
     "    print(f\"Copying dataset tree from {src} -> {dst} ...\")\n",
-    "    shutil.copytree(src, dst)\n",
+    "    shutil.copytree(src, dst, dirs_exist_ok=True)\n",
     "    print(\"Copy complete.\")\n",
     "\n",
     "\n",
@@ -437,13 +437,13 @@
     "    print(f\"\\n== Building subset {subset_name} ({target_total} trajectories) ==\")\n",
     "\n",
     "    # 1) Copy the full dataset directory as before\n",
-    "    shutil.copytree(DST_DATASET_DIR, subset_root)\n",
+    "    shutil.copytree(DST_DATASET_DIR, subset_root, dirs_exist_ok=True)\n",
     "\n",
     "    # 2) Overwrite the subset's `val` split with a COPY of the ORIGINAL `train` split.\n",
     "    #    => Both subset_root/train and subset_root/val now have train-like structure.\n",
     "    if (subset_root / \"val\").exists():\n",
     "        shutil.rmtree(subset_root / \"val\")\n",
-    "    shutil.copytree(DST_DATASET_DIR / \"train\", subset_root / \"val\")\n",
+    "    shutil.copytree(DST_DATASET_DIR / \"train\", subset_root / \"val\", dirs_exist_ok=True)\n",
     "\n",
     "    # 3) Sample indices from the ORIGINAL train pool\n",
     "    subset_rng = np.random.default_rng(RANDOM_SEED + target_total)\n",
