--- a/notebooks/pusht_discretization_codebooks.ipynb
+++ b/notebooks/pusht_discretization_codebooks.ipynb
@@ -375,8 +375,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "dino_wm",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
